# voice-debate

./: .env.example  .gitignore  README.md  __init__.py  __main__.py  assistant.py  config.py  database.py  pyproject.toml  requirements.txt  speech.py
docs/: api-integration-spec.md  database-design.md  design-expert-prompt.md  project-design-docs.md  project-status-dashboard (1).md  project-status-dashboard (2).md  project-status-dashboard.md  technical-architecture (1).md  technical-architecture (2).md  technical-architecture (3).md  technical-architecture (4).md  technical-architecture (5).md  technical-architecture.md  user-experience.md
src/voicedebate/: __main__.py  assistant.py  character_loader.py  config.py  conversation_logger.py  models.py  speech.py
src/voicedebate/data/characters/: aristotle.json  socrates.json
src/voicedebate/ui/: app.py
ui/: __init__.py  app.py
voicedebate/: pyvenv.cfg
